@@ -32,10 +32,10 @@ AC_ARG_ENABLE(debug,
         if test "$enableval" = "yes"; then
             CXXFLAGS="$CXXFLAGS -Wall -DDEBUG"
 	else
-            CXXFLAGS="$CXXFLAGS -Wall -Werror -DNDEBUG"
+            CXXFLAGS="$CXXFLAGS -Wall -DNDEBUG"
         fi
     ],[
-        CXXFLAGS="$CXXFLAGS -Wall -Werror -DNDEBUG"
+        CXXFLAGS="$CXXFLAGS -Wall -DNDEBUG"
     ]
 )
 
