@@ -9,7 +9,7 @@
 class RootDecoder : public Atlas::Message::DecoderBase
 {
 protected:
-    virtual void objectArrived(const Atlas::Message::Element::MapType& o)
+    virtual void messageArrived(const Atlas::Message::Element::MapType& o)
     {
         assert(o.find(std::string("parents")) != o.end());
         assert((*o.find("parents")).second.asList().size() == 1);
